# esfera-challenge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  example.env  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  setup.cfg  usuarios.csv
.github/workflows/: pre_commit.yml  tests.yml
alembic/: env.py
alembic/versions/: 9c5f327655c7_cria_tabela_users.py
docs/: README.md
src/: README.md
src/challenge/: __main__.py  celery.py  config.py  database.py  models.py  tasks.py
src/challenge/adapters/: csv_reader_adapter.py  repository.py
src/challenge/services/: unit_of_work.py  user_processor.py
tests/unit/: test_tasks.py
tests/unit/adapters/: test_csv_reader_adapter.py  test_user_repository.py
tests/unit/services/: test_read_csv.py  test_uow.py
