[project]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements.dev.txt"] }}

[tool:pytest]
python_files = test.py test_*.py *_test.py
addopts = --no-migrations
filterwarnings = ignore::Warning

[coverage:run]
relative_files = True
branch = True
source = src
omit =
    */exceptions/*
